Changed dictionary encoder and added file splitter.